...
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="please_complete_all_information">Please complete all information</string>
    <string name="the_email_address_isnt_in_the_correct_format">The email address isn\'t in the correct format</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="confirm_password_didnt_match">Confirm password didn\'t match</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="start_time_must_be_sooner_than_end_time">Start time must be sooner than End time!</string>
    <string name="end_time_must_be_later_than_start_time">End time must be later than Start time!</string>
    <string name="error">Error!</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
...
