<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/learning_fragment"
        android:icon="@drawable/ic_book"
        android:title="@string/learning"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/ic_person"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>