<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_username"
            style="@style/AuthEditTextStyle"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <EditText
            android:id="@+id/input_email"
            style="@style/AuthEditTextStyle"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/input_email"
            app:layout_constraintStart_toStartOf="@+id/input_email"
            app:layout_constraintTop_toBottomOf="@id/input_email"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_password"
                style="@style/AuthEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_confirmed_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/input_password_layout"
            app:layout_constraintStart_toStartOf="@+id/input_password_layout"
            app:layout_constraintTop_toBottomOf="@id/input_password_layout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_confirmed_password"
                style="@style/AuthEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingVertical="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_confirmed_password_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="?colorPrimary"
            android:indeterminateTintMode="src_atop"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/button_sign_up"
            app:layout_constraintEnd_toEndOf="@id/button_sign_up"
            app:layout_constraintStart_toStartOf="@id/button_sign_up"
            app:layout_constraintTop_toTopOf="@id/button_sign_up" />

        <TextView
            android:id="@+id/text_sign_in_suggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/already_have_a_account"
            app:layout_constraintEnd_toStartOf="@+id/text_sign_in"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/button_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

        <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_in"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_sign_in_suggest"
            app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
            app:layout_constraintStart_toEndOf="@+id/text_sign_in_suggest" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>