...
            android:id="@+id/action_routing_fragment_to_auth_flow"
            app:destination="@id/auth_flow"
            app:popUpTo="@id/routing_fragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_routing_fragment_to_home_fragment"
            app:destination="@id/home_fragment"
            app:popUpTo="@id/routing_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.wordnotes.ui.home.HomeFragment"
...
    <fragment
        android:id="@+id/edit_profile_fragment"
        android:name="com.example.wordnotes.ui.account.profile.EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile" />
    <navigation
        android:id="@+id/auth_flow"
        app:startDestination="@id/sign_in_fragment">
        <fragment
            android:id="@+id/sign_in_fragment"
            android:name="com.example.wordnotes.ui.auth.SignInFragment"
            tools:layout="@layout/fragment_sign_in">
            <action
                android:id="@+id/action_sign_in_fragment_to_sign_up_fragment"
...
